--- a/.gitignore
+++ b/.gitignore
@@ -134,4 +134,8 @@ tags
 [._]*.un~
 
 #VSCODE
-.vscode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
